# caption_search

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
caption_search/: __init__.py  database.py  scraper.py  vttparser.py
caption_search/sql/: __init__.py  init.sql  init_fts.sql  insert_caption.sql  insert_video.sql  search.sql
caption_search/static/: styles.css
caption_search/templates/: base.html  header.html  index.html  search.html
resources/: RESEARCH.md  autogen_info.json  info.json  subtitles.vtt
